Fixes #147: verified that request/response overrides global - though this did uncover some weakness in the chain framework. Reworking it soon.