@@ -16,6 +16,9 @@
 package io.github.cjstehno.ersatz.encdec;
 
 import io.github.cjstehno.ersatz.cfg.ContentType;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.Value;
 
 import javax.activation.MimeType;
 import java.util.LinkedList;
@@ -25,6 +28,7 @@ import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import static io.github.cjstehno.ersatz.encdec.MimeTypes.createMimeType;
+import static lombok.AccessLevel.PACKAGE;
 
 /**
  * Configuration manager for a collection of request content decoders.
@@ -91,7 +95,7 @@ public class RequestDecoders {
 
         final List<DecoderMapping> found = decoders.stream()
             .filter(c -> c.mimeType.match(mimeType))
-            .collect(Collectors.toList());
+            .toList();
 
         if (found.isEmpty()) {
             return null;
@@ -108,14 +112,10 @@ public class RequestDecoders {
         }
     }
 
+    @RequiredArgsConstructor(access = PACKAGE)
     private static class DecoderMapping {
 
-        final MimeType mimeType;
-        final BiFunction<byte[], DecodingContext, Object> decoder;
-
-        DecoderMapping(MimeType mimeType, BiFunction<byte[], DecodingContext, Object> decoder) {
-            this.mimeType = mimeType;
-            this.decoder = decoder;
-        }
+        private final MimeType mimeType;
+        private final BiFunction<byte[], DecodingContext, Object> decoder;
     }
 }
